<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/default_padding_size_3"
    tools:context=".presentation.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_size_3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/leftArrowImgBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/chevron_left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_action_title"
            android:textAlignment="center"
            android:textFontWeight="600"
            android:textSize="20sp" />

        <View
            android:layout_width="32dp"
            android:layout_height="32dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_title"
            android:textFontWeight="600"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelInputLocationBtn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getLocationByLatLongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_padding_size"
            android:backgroundTint="@color/light_blue"
            android:text="@string/get_location_by_latlng"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/editLocationInputBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/edit" />

    </LinearLayout>

    <TextView
        android:id="@+id/locationValueTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_size_2"
        android:text="@string/location_sample"
        android:textFontWeight="400"
        android:textSize="18sp" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/inputLocationAutoCompleteTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="@dimen/default_padding_size_2"
        android:layout_marginBottom="@dimen/default_padding_size_2"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_size_3"
        android:layout_marginBottom="@dimen/default_padding_size_2"
        android:text="@string/temperature_unit"
        android:textFontWeight="600"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/celsiusRadioRow"
            layout="@layout/temperature_radio_row" />

        <include
            android:id="@+id/fahrenheitRadioRow"
            layout="@layout/temperature_radio_row" />
    </RadioGroup>


</LinearLayout>