<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/locationTv"
        tools:text="@string/location_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dateTv"
        tools:text="@string/date_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="24dp">

            <ImageView
                android:id="@+id/temperatureIndicateImg"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/temperature_description"
                android:scaleType="centerInside"
                android:src="@drawable/sunny_large" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="120dp"
            android:background="@color/light_blue" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temperatureTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_sample"
                    android:textSize="@dimen/temperature_tv_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statusWeatherTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather_status_sample"
                        android:textSize="24sp" />
                </LinearLayout>

<!--                <TextView-->
<!--                    android:id="@+id/maxMinTempTv"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/default_padding_size_2"-->
<!--                    android:text="@string/temperature_max_min_sample"-->
<!--                    android:textSize="18sp" />-->

<!--                <TextView-->
                <!--                    android:id="@+id/seeDetailTvToBtn"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:text="@string/see_detail"-->
                <!--                    android:textColor="@color/light_blue" />-->

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>