<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/default_padding_size">

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_sample" />

        <ImageView
            android:id="@+id/weatherIndicateImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="@dimen/default_image_margin_size"
            android:layout_marginHorizontal="@dimen/default_padding_size_3"
            android:src="@drawable/clear_night_large" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statusIndicateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textFontWeight="600"
                android:text="@string/weather_status_sample" />

            <TextView
                android:id="@+id/temperatureTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/temperature_sample" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecastHourlyLv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/default_padding_size"
        tools:listitem="@layout/forecast_hour_tile"/>

</LinearLayout>